--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Document</title>
 </head>
+
 <body>
+    <form action="" autocomplete="off" method="post" id="form">
+        <div class="container">
+            <div class="icon-name">
+                <label for="name" class="icon-name"><span class="material-symbols-outlined">person</span>Nome</label>
+                <input type="text" name="name" id="name" placeholder="Seu Nome" required autofocus />
+            </div>
+            <div class="icon-name">
+                <label for="password" class="icon-name"><span class="material-symbols-outlined">password</span>Crie uma
+                    Senha</label>
+                <input type="password" name="password" id="password" placeholder="Sua Senha" required />
+            </div>
+            <div class="icon-name">
+                <label for="tel" class="icon-name"><span class="material-symbols-outlined">call</span>Seu Número
+                    Telefônico</label>
+                <input type="tel" name="tel" id="tel" placeholder="Seu Telefone" required
+                    pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" minlength=" 11 " maxlength=" 11 " />
+                <br />
+                <small>Formato: (DDD) 12345-6789</small>
+            </div>
+            <div class="icon-name">
+                <label for="date" class="icon-name"><span class="material-symbols-outlined"><span
+                            class="material-symbols-outlined">
+                            calendar_month
+                        </span></span>Data de seu Aniversario</label>
+                <input type="date" name="date" id="date" required autofocus />
+            </div>
+            <div class="button">
+                <button type="submit">Login</button>
+            </div>
+        </div>
+    </form>
     <script src="js/index.js"></script>
 </body>
+
 </html>
